test/ppx_repr/deriver/errors/nobuiltin_nonempty.ml
type x = (unit[@nobuiltin ()]) [@@deriving repr]
